fix horizontal alignment.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,5 +1,5 @@
 /* Universal Styles */
-body {
+* {
   margin: 0 auto;
 }
 
